--- a/Infographics.html
+++ b/Infographics.html
@@ -492,7 +492,7 @@
                 <a href="#lacunas" class="nav-link"><span>Lacunas</span></a>
                 <a href="#solucao" class="nav-link"><span>Solução LL360</span></a>
                 <a href="#tecnologias" class="nav-link"><span>Tecnologias</span></a>
-                <a href="Index.html" class="nav-link"><span>Pagina Principal</span></a>
+                <a href="index.html" class="nav-link"><span>Pagina Principal</span></a>
             </div>
         </div>
     </nav>
